cluster/apps/omni-tools/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: omni-tools
    app.kubernetes.io/version: 0.6.0
  name: omni-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: omni-tools
  template:
    metadata:
      labels:
        app.kubernetes.io/name: omni-tools
        app.kubernetes.io/version: 0.6.0
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - command:
        - nginx
        - -c
        - /etc/nginx/nginx.conf
        - -g
        - daemon off;
        image: iib0011/omni-tools:0.6.0
        name: omni-tools
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          name: nginx-config-volume
          readOnly: true
        - mountPath: /tmp
          name: tmp-volume
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 192Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 101
          runAsGroup: 101
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      volumes:
      - name: nginx-config-volume
        configMap:
          name: omni-tools-nginx-config
      - name: tmp-volume
        emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
